--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -41,3 +41,19 @@ body {
   -webkit-line-clamp: 3;
   line-clamp: 3;
 }
+
+@keyframes square-glow {
+  0%, 90%, 100% {
+    background-color: rgb(39 39 42);
+  }
+  5% {
+    background-color: rgb(34 197 94);
+  }
+  10% {
+    background-color: rgb(22 163 74);
+  }
+}
+
+.animate-square-glow {
+  animation: square-glow 8s ease-in-out infinite;
+}
